--- a/app/src/main/res/menu/menu_project.xml
+++ b/app/src/main/res/menu/menu_project.xml
@@ -7,4 +7,16 @@
         android:title="@string/menu_cancelPortfolio"
         app:showAsAction="always"/>
 
+    <item
+        android:id="@+id/item_project_save"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/menu_project_delete"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/item_project_delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/menu_project_delete"
+        app:showAsAction="always" />
+
 </menu>
