--- a/app/src/main/res/menu/menu_portfolio.xml
+++ b/app/src/main/res/menu/menu_portfolio.xml
@@ -2,14 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <item
         android:id="@+id/item_cancel"
         android:title="@string/menu_cancelPortfolio"
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/project_add"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/menu_addProject"
+        android:id="@+id/item_portfolio_save"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/menu_project_delete"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/item_portfolio_delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/menu_portfolio_delete"
+        app:showAsAction="always" />
+
+
 </menu>
