--- a/app/src/main/res/layout/activity_portfolio.xml
+++ b/app/src/main/res/layout/activity_portfolio.xml
@@ -59,11 +59,14 @@
                     android:fontFamily="@font/alata"
                     android:gravity="center_horizontal|center_vertical"
                     android:inputType="none"
+                    android:text="@string/new_portfolio_label"
                     android:textColor="#2AA599"
                     android:textSize="20sp"
-                    android:text="@string/new_portfolio_label"/>
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:textColor="#2AA599"
+                    android:textStyle="bold"
                     android:id="@+id/editPortfolioDetails"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -71,6 +74,7 @@
                     android:text="@string/edit_portfolio_details" />
 
                 <TextView
+                    android:textColor="#2AA599"
                     android:id="@+id/portfolioTitleLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -92,6 +96,7 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:textColor="#2AA599"
                     android:id="@+id/portfolioDescriptionLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -141,6 +146,19 @@
                     android:text="@string/button_addPortfolio"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/portfolioProjects"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/alata"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:inputType="none"
+                    android:textColor="#2AA599"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:text="@string/portfolio_projectList"/>
 
                 <Button
                     android:id="@+id/btnNewProject"
