--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/item_map"
+        android:contentDescription="@string/menu_viewProjects"
+        android:icon="@android:drawable/ic_menu_mapmode"
+        android:title="@string/menu_viewProjects"
+
+        app:showAsAction="always|withText" />
+    <item
         android:id="@+id/item_add"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/menu_addPortfolio"
