--- a/app/src/main/res/layout/activity_portfolio_list.xml
+++ b/app/src/main/res/layout/activity_portfolio_list.xml
@@ -38,6 +38,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
@@ -48,9 +49,30 @@
                     android:fontFamily="@font/alata"
                     android:gravity="center_horizontal|center_vertical"
                     android:inputType="none"
+                    android:text="@string/portfolios_label"
                     android:textColor="#2AA599"
-                    android:textSize="20sp"
-                    android:text="@string/portfolios_label"/>
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/filterPortfolioTypes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/portfolio_filter_label"
+                    android:textColor="#2AA599"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/portfolioTypeSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <Button
+                    android:id="@+id/btnFilter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|center_horizontal"
+                    android:text="@string/btn_filter" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
