--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -40,6 +40,30 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/projectName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/alata"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:inputType="none"
+                    android:textColor="#2AA599"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/newProjectLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/alata"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:inputType="none"
+                    android:text="@string/new_project_label"
+                    android:textColor="#2AA599"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/projectTitle"
                     android:layout_width="match_parent"
@@ -66,6 +90,19 @@
                     android:padding="8dp"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="14sp" />
+
+                <TextView
+                    android:textColor="#2AA599"
+                    android:id="@+id/projectBudgetLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/project_budget_label" />
+
+                <Spinner
+                    android:id="@+id/projectBudgetSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/projectLatitude"
