--- a/app/src/main/res/layout/activity_project_list.xml
+++ b/app/src/main/res/layout/activity_project_list.xml
@@ -38,6 +38,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
@@ -48,10 +49,23 @@
                     android:fontFamily="@font/alata"
                     android:gravity="center_horizontal|center_vertical"
                     android:inputType="none"
+                    android:text="@string/portfolio_projectList"
                     android:textColor="#2AA599"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:text="@string/portfolio_projectList"/>
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/portfolioName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/alata"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:inputType="none"
+                    android:text="@string/title_portfolioName"
+                    android:textColor="#2AA599"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/btnNewProject"
@@ -65,6 +79,18 @@
                     android:text="@string/new_project"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
+
+                <Spinner
+                    android:id="@+id/projectBudgetSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <Button
+                    android:id="@+id/btnBudgetFilter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|center_horizontal"
+                    android:text="@string/btn_budget_filter" />
 
 
                 <androidx.recyclerview.widget.RecyclerView
