--- a/app/src/main/res/layout/card_project.xml
+++ b/app/src/main/res/layout/card_project.xml
@@ -40,7 +40,7 @@
             tools:text="A Title" />
 
         <TextView
-            android:id="@+id/projectDescription"
+            android:id="@+id/projectBudget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -49,6 +49,18 @@
             app:layout_constraintHorizontal_bias="0.052"
             app:layout_constraintStart_toEndOf="@+id/projectImageIcon"
             app:layout_constraintTop_toBottomOf="@id/projectTitle"
+            tools:text="Project Budget" />
+
+        <TextView
+            android:id="@+id/projectDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.052"
+            app:layout_constraintStart_toEndOf="@+id/projectImageIcon"
+            app:layout_constraintTop_toBottomOf="@id/projectBudget"
             tools:text="A Description" />
 
 
