--- a/app/src/main/res/layout/activity_portfolio.xml
+++ b/app/src/main/res/layout/activity_portfolio.xml
@@ -63,7 +63,22 @@
                     android:text="@string/new_portfolio_label"
                     android:textColor="#2AA599"
                     android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@id/toolbarPortfolio"/>
+
+                <Button
+                    android:id="@+id/btnGoToProjects"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@color/colorAccent"
+                    android:gravity="center|center_horizontal"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:stateListAnimator="@null"
+                    android:text="@string/button_goToProjects"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/editPortfolioDetails"
@@ -130,6 +145,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
+                <TextView
+                    android:id="@+id/portfolioImageLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/portfolio_image_label"
+                    android:textColor="#2AA599" />
+
+                <ImageView
+                    android:id="@+id/portfolioImage"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
                 <Button
                     android:id="@+id/chooseImage"
                     android:layout_width="200dp"
@@ -141,12 +170,6 @@
                     android:text="@string/button_addImage"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
-
-                <ImageView
-                    android:id="@+id/portfolioImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@mipmap/ic_launcher" />
 
                 <Button
                     android:id="@+id/btnAdd"
@@ -161,19 +184,7 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
 
-                <Button
-                    android:id="@+id/btnGoToProjects"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:background="@color/colorAccent"
-                    android:gravity="center|center_horizontal"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp"
-                    android:stateListAnimator="@null"
-                    android:text="@string/button_goToProjects"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp" />
+
 
 
             </LinearLayout>
