--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -38,6 +38,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
@@ -64,6 +65,14 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/projectTitleLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/project_title_label"
+                    android:textColor="#2AA599" />
+
                 <EditText
                     android:id="@+id/projectTitle"
                     android:layout_width="match_parent"
@@ -77,6 +86,14 @@
                     android:padding="8dp"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/projectDescriptionLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/project_description_label"
+                    android:textColor="#2AA599" />
 
                 <EditText
                     android:id="@+id/projectDescription"
@@ -92,17 +109,25 @@
                     android:textSize="14sp" />
 
                 <TextView
-                    android:textColor="#2AA599"
                     android:id="@+id/projectBudgetLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="@string/project_budget_label" />
+                    android:text="@string/project_budget_label"
+                    android:textColor="#2AA599" />
 
                 <Spinner
                     android:id="@+id/projectBudgetSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/projectLocationLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/project_location_label"
+                    android:textColor="#2AA599" />
 
                 <TextView
                     android:id="@+id/projectLatitude"
@@ -122,7 +147,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:hint="@string/hint_projectLatitude"
+                    android:hint="@string/hint_projectLongitude"
                     android:inputType="none"
                     android:maxLength="25"
                     android:maxLines="1"
@@ -130,16 +155,51 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="14sp" />
 
+                <Button
+                    android:id="@+id/projectLocation"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@color/colorAccent"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:stateListAnimator="@null"
+                    android:text="@string/button_location"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/projectCompletionDateLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/project_completion_label"
+                    android:textColor="#2AA599" />
+
                 <DatePicker
                     android:id="@+id/projectCompletionDatePicker"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:datePickerMode="spinner"
-                    android:calendarViewShown="false" />
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner" />
+
+                <TextView
+                    android:id="@+id/projectImagesLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/project_images_label"
+                    android:textColor="#2AA599" />
+
+                <ImageView
+                    android:id="@+id/projectImage"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/ic_launcher" />
 
                 <Button
                     android:id="@+id/chooseImage"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     android:background="@color/colorAccent"
@@ -150,10 +210,40 @@
                     android:textSize="16sp" />
 
                 <ImageView
-                    android:id="@+id/projectImage"
-                    android:layout_width="match_parent"
+                    android:id="@+id/projectImage2"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     app:srcCompat="@mipmap/ic_launcher" />
+
+                <Button
+                    android:id="@+id/chooseImage2"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@color/colorAccent"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:text="@string/button_addImage"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:id="@+id/projectImage3"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+                <Button
+                    android:id="@+id/chooseImage3"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@color/colorAccent"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:text="@string/button_addImage"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/btnProjectAdd"
@@ -168,18 +258,6 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
 
-                <Button
-                    android:id="@+id/projectLocation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:background="@color/colorAccent"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="8dp"
-                    android:stateListAnimator="@null"
-                    android:text="@string/button_location"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"/>
 
 
 
