--- a/app/src/main/res/layout/activity_project_maps.xml
+++ b/app/src/main/res/layout/activity_project_maps.xml
@@ -25,6 +25,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorAccentVariant"
+            app:titleTextAppearance="@style/MenuTextAppearance"
             app:titleTextColor="@color/colorPrimary" />
     </com.google.android.material.appbar.AppBarLayout>
 
