--- a/app/src/main/res/drawable/custom_border.xml
+++ b/app/src/main/res/drawable/custom_border.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 <corners android:radius="0dp"/>
 <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-<stroke android:width="20dp" android:color="@color/teal_700"/>
+<stroke android:width="20dp" android:color="@color/colorAccentVariant"/>
 </shape>
