--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -26,6 +26,8 @@
                 android:id="@+id/toolbarProject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorAccentVariant"
+                app:titleTextAppearance="@style/MenuTextAppearance"
                 app:titleTextColor="@color/colorPrimary" />
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -46,32 +48,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:fontFamily="@font/alata"
+                    android:fontFamily="@font/roboto_medium"
                     android:gravity="center_horizontal|center_vertical"
                     android:inputType="none"
-                    android:textColor="#2AA599"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/newProjectLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/alata"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:inputType="none"
+                    android:paddingTop="6pt"
                     android:text="@string/new_project_label"
-                    android:textColor="#2AA599"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/colorTitles"
+                    android:textSize="34sp" />
 
                 <TextView
                     android:id="@+id/projectTitleLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/project_title_label"
-                    android:textColor="#2AA599" />
+                    android:textColor="@color/colorSubTitles"
+                    android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/projectTitle"
@@ -83,17 +76,20 @@
                     android:inputType="text"
                     android:maxLength="25"
                     android:maxLines="1"
+                    android:fontFamily="@font/roboto"
                     android:padding="8dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/projectDescriptionLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/project_description_label"
-                    android:textColor="#2AA599" />
+                    android:textColor="@color/colorSubTitles"
+                    android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/projectDescription"
@@ -102,19 +98,22 @@
                     android:layout_margin="8dp"
                     android:hint="@string/hint_projectDescription"
                     android:inputType="text"
-                    android:maxLength="25"
+                    android:maxLength="50"
                     android:maxLines="1"
+                    android:fontFamily="@font/roboto"
                     android:padding="8dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/projectBudgetLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/project_budget_label"
-                    android:textColor="#2AA599" />
+                    android:textColor="@color/colorSubTitles"
+                    android:textSize="16sp" />
 
                 <Spinner
                     android:id="@+id/projectBudgetSpinner"
@@ -126,8 +125,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/project_location_label"
-                    android:textColor="#2AA599" />
+                    android:textColor="@color/colorSubTitles"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/projectLatitude"
@@ -138,9 +139,10 @@
                     android:inputType="none"
                     android:maxLength="25"
                     android:maxLines="1"
+                    android:fontFamily="@font/roboto"
                     android:padding="8dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/projectLongitude"
@@ -151,9 +153,10 @@
                     android:inputType="none"
                     android:maxLength="25"
                     android:maxLines="1"
+                    android:fontFamily="@font/roboto"
                     android:padding="8dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/projectLocation"
@@ -173,8 +176,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/project_completion_label"
-                    android:textColor="#2AA599" />
+                    android:textColor="@color/colorSubTitles"
+                    android:textSize="16sp" />
 
                 <DatePicker
                     android:id="@+id/projectCompletionDatePicker"
@@ -188,8 +193,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/project_images_label"
-                    android:textColor="#2AA599" />
+                    android:textColor="@color/colorSubTitles"
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:id="@+id/projectImage"
