--- a/app/src/main/res/layout/content_project_maps.xml
+++ b/app/src/main/res/layout/content_project_maps.xml
@@ -53,19 +53,38 @@
                 android:id="@+id/currentTitle"
                 android:layout_width="175dp"
                 android:layout_height="21dp"
+                android:fontFamily="@font/roboto"
                 android:text="@string/project_title_placeholder"
-                app:layout_constraintBottom_toTopOf="@+id/currentDescription"
+                android:textColor="@color/colorTitles"
+                android:textSize="16sp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/currentPortfolio"
                 app:layout_constraintEnd_toStartOf="@+id/currentImage"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.722" />
 
             <TextView
+                android:id="@+id/currentPortfolio"
+                android:layout_width="173dp"
+                android:layout_height="21dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/project_portfolio_placeholder"
+                app:layout_constraintBottom_toTopOf="@+id/currentDescription"
+                app:layout_constraintTop_toBottomOf="@+id/currentTitle"
+                app:layout_constraintEnd_toStartOf="@+id/currentImage"
+                app:layout_constraintHorizontal_bias="0.521"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
                 android:id="@+id/currentDescription"
                 android:layout_width="173dp"
                 android:layout_height="48dp"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="18dp"
+                android:fontFamily="@font/roboto"
                 android:text="@string/project_description_placeholder"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/currentImage"
                 app:layout_constraintHorizontal_bias="0.521"
