--- a/app/src/main/res/menu/menu_project.xml
+++ b/app/src/main/res/menu/menu_project.xml
@@ -3,9 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item_cancel"
+        android:id="@+id/item_home"
+        android:icon="@drawable/icon_home_white"
         android:title="@string/menu_cancelPortfolio"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/item_cancel"
+        android:icon="@android:drawable/ic_menu_revert"
+        android:title="@string/menu_cancelPortfolio"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/item_project_save"
