--- a/app/src/main/res/menu/menu_project_list.xml
+++ b/app/src/main/res/menu/menu_project_list.xml
@@ -4,9 +4,18 @@
 
 
     <item
-        android:id="@+id/item_cancel"
+        android:id="@+id/item_home"
+        android:icon="@drawable/icon_home_white"
         android:title="@string/menu_cancelPortfolio"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/item_cancel"
+        android:icon="@android:drawable/ic_menu_revert"
+        android:iconTint="@color/colorPrimary"
+        android:iconTintMode="multiply"
+        android:title="@string/menu_cancelPortfolio"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/item_add"
