--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,16 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#6A6767</color>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#000000</color>
+    <color name="colorTitles">#FF018786</color>
+    <color name="colorSubTitles">#2AA599</color>
     <color name="colorAccent">#4c90af</color>
+    <color name="colorAccentVariant">#2AADB1</color>
+    <color name="colorButtons">#167477</color>
+
 
 </resources>
