--- a/app/src/main/res/layout/activity_portfolio_list.xml
+++ b/app/src/main/res/layout/activity_portfolio_list.xml
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:fontFamily="@font/roboto_medium"
+                    android:fontFamily="@font/cinzel"
                     android:gravity="center_horizontal|center_vertical"
                     android:inputType="none"
                     android:paddingTop="6pt"
@@ -64,8 +64,7 @@
                     android:fontFamily="@font/roboto"
                     android:text="@string/portfolio_filter_label"
                     android:textColor="@color/colorSubTitles"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textSize="20sp" />
 
                 <Spinner
                     android:id="@+id/portfolioTypeSpinner"
