--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:fontFamily="@font/roboto_medium"
+                    android:fontFamily="@font/cinzel"
                     android:gravity="center_horizontal|center_vertical"
                     android:inputType="none"
                     android:paddingTop="6pt"
@@ -74,7 +74,7 @@
                     android:autofillHints=""
                     android:hint="@string/hint_projectTitle"
                     android:inputType="text"
-                    android:maxLength="25"
+                    android:maxLength="20"
                     android:maxLines="1"
                     android:fontFamily="@font/roboto"
                     android:padding="8dp"
