--- a/app/src/main/res/layout/card_portfolio.xml
+++ b/app/src/main/res/layout/card_portfolio.xml
@@ -31,10 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:fontFamily="@font/roboto"
+            android:fontFamily="@font/cinzel"
             android:textAlignment="viewStart"
             android:textColor="@color/colorTitles"
-            android:textSize="30sp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.048"
             app:layout_constraintStart_toEndOf="@+id/imageIcon"
