--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/alata</item>
         <item>@font/allerta_stencil</item>
+        <item>@font/cinzel</item>
+        <item>@font/cinzel_bold</item>
         <item>@font/cinzel_decorative</item>
         <item>@font/roboto</item>
         <item>@font/roboto_bold</item>
